# ollama-mcp

./: .env.example  .gitignore  README.md  car_db_tool.py  car_model.py  car_schemas.py  db.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: defaults.py
database/: db_seeder.py
init/: init_data.sql
mcp_servers/: server.py
servers/: data.py
