[project]
name = "c2s-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.3.0",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "mcp[cli]>=1.9.1",
    "praisonaiagents>=0.0.84",
    "pydantic>=2.11.5",
    "ruff>=0.11.11",
    "sqlmodel>=0.0.24",
]
