[project]
name = "ollama-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.9.1",
    "praisonaiagents[llm]>=0.0.87",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "sqlmodel>=0.0.24",
]
